# MANDISENSI_AGENTS

./: .dockerignore  .env.example  .gitignore  AGENT_RUNNER_GUIDE.md  BACKEND_DEPLOYMENT_ENVIRONMENT.md  Dockerfile  FRONTEND_DEPLOYMENT_ENVIRONMENT.md  MANDISENSE_PHASE1_DEPLOYMENT_READINESS_AUDIT.txt  MIGRATION_IMPORT_PATH_AUDIT_REPORT.txt  NEXTJS_VERSION_VALIDATION_REPORT.txt  PHASE_2A_SECURITY_AND_REPO_HARDENING_REPORT.txt  PHASE_2B_ENVIRONMENT_STANDARDIZATION_REPORT.txt  PHASE_2C_DATABASE_AND_RENDER_PREPARATION_REPORT.txt  PHASE_2D_RENDER_DEPLOYMENT_EXECUTION_GUIDE.txt  README.md  SYSTEM_CONTEXT.md  SYSTEM_HANDOFF.md  TraderOS_Executive_Evidence_Summary.md  docker-compose.yml  generate_elite_presentation_script.py  generate_presentation_script.py  mandisense_ai_elite_presentation_script.docx  mandisense_ai_presentation_script.docx  package-lock.json  pyproject.toml  render.yaml  run_agents.bat  run_agents.ps1  run_agents.py  run_offline_training.py  slide_parse.txt  slide_parse_temp.py  startup_err.txt  startup_log.txt  startup_out.txt  test_payload.json
mandisense_ai/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  docker-compose.yml  main.py  nginx.conf  progress.md  pyproject.toml
mandisense_ai/api/: __init__.py  app.py
mandisense_ai/cognition/: arbitration.py  deployment.py  directives.py  engine.py  enterprise.py  memory.py  memory_engine.py  ontology.py  orchestration.py  registry.py  replay.py  scheduler.py  shocks.py  state_store.py  stress_test_truth.py  temporal.py  test_breaker.py  verification.py
mandisense_ai/config/: config.yaml  mandi_master.csv  mandi_metadata.csv  settings.py
mandisense_ai/core/: decision_engine.py
mandisense_ai/data/: features.py  prepare_datasets.py  repository.py  schemas.py
mandisense_ai/db/: client.py  connection.py  migrate_jsonl_to_pg.py  prediction_logger_db.py  queries.py  schema.sql
mandisense_ai/ensemble/: __init__.py  agent_ensemble.py  dataset_builder.py  dynamic_weighter.py  feedback_store.py  learned_ensemble.py  meta_ensemble.py  prediction_logger.py  regime_detector.py
mandisense_ai/evaluation/: __init__.py  backtester.py  error_boxplot.py  error_distribution.py  model_comparison.py  (+4 more)
(+1018 files in other folders)
