[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mandisense-api"
version = "1.0.0"
description = "MandiSense AI Production API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "scipy>=1.10.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "prometheus-client>=0.17.0",
    "joblib>=1.3.0",
    "arch>=7.0.0",
    "hmmlearn>=0.3.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "pyarrow>=14.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "mandisense_ai*" , "backend*"]
