[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mandisense_ai"
version = "0.1.0"
description = "Adaptive multi-agent intelligent system for agricultural mandi price forecasting."
authors = [
    { name = "Senior AI Architect", email = "architect@mandisense.ai" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "scipy>=1.10.0",
    "arch>=7.0.0",
    "hmmlearn>=0.3.0",
    "joblib>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "utils*", "data*", "core*", "explainability*", "ensemble*", "api*", "orchestrator*", "tasks*", "db*", "lib*", "services*"]
